# parking-counter

./: .gitignore  README.md  pyproject.toml  requirements-yolo.txt  requirements.txt  run.bat  run_internet.bat  set_credentials.bat
app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
app/routers/: admin.py  dashboard.py  detection.py  history.py
app/services/: detection_service.py  image_processor.py  parking_detector.py  reference_manager.py  space_store.py  state_manager.py  yolo_detector.py
app/static/css/: style.css
app/static/js/: spaces.js
app/templates/: base.html  dashboard.html  history.html  spaces.html  upload.html
config/: settings.json
scripts/: check_credentials.py  create_sample_data.py
tests/: test_api.py  test_auth.py  test_database.py  test_detector.py  test_state_manager.py  test_yolo_detector.py
