[project]
name = "parking-counter"
version = "0.1.0"
description = "低コストな駐車場空き台数カウントMVP（Android静止画 + OpenCV画像差分）"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
